# TradeChart

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
tradechart/: __init__.py
tradechart/charts/: __init__.py  heatmap.py  indicators.py  renderer.py  themes.py  watermark.py
tradechart/config/: __init__.py  logger.py  settings.py
tradechart/core/: __init__.py  engine.py
tradechart/data/: __init__.py  fetcher.py  groups.py  models.py  provider_base.py  store.py
tradechart/providers/: __init__.py  stooq_provider.py  tradingview_provider.py  yfinance_provider.py
tradechart/utils/: __init__.py  exceptions.py  formatting.py  install.py  validation.py
tradechart_examples/discord_demo_bot/: discord_bot.py  terms_and_privacy.md
